<resources>
    <string name="app_name">Ma réu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_list_meetings">ListMeetingsActivity</string>
    <string name="placeholder">Placeholder</string>
    <string name="filter">Filter</string>
    <string name="subject">subject</string>
    <string name="meeting_date">Meeting date :</string>
    <string name="meeting_time">Meeting time :</string>
    <string name="comma_separated_emails">Emails separated with comma</string>
    <string name="your_picked_color_is">Your picked color is:</string>
    <string name="pick_color">Pick Color</string>
    <string name="place">Place :</string>
    <string name="create_meeting">Create meeting</string>
    <string name="add_meeting_button">Add meeting button</string>
    <string name="delete_button">Delete Button</string>
    <string name="meeting_color">meeting color</string>
    <string name="filter_by_place">Filter by place</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="no_filter">No filter</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select time</string>
    <string name="emails">emails:</string>
    <string name="date_format">%1$02d/%2$02d/%3$d</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="toast_not_valid_mail">This mail is not valid !</string>
    <string name="StrChoose">Choose</string>
    <string name="StrCancel">Cancel</string>
    <string name="toast_subject_required">subject is required</string>
    <string name="toast_date_required">Date is required</string>
    <string name="toast_time_required">Time of the meeting is required</string>
    <string name="toast_mail_required">At least one email is required</string>
    <string name="contributors_emails">contributors\' emails</string>
    <string name="select_room">Select Room</string>
    <string-array name="places_array">
        <item>Peach</item>
        <item>Mario</item>
        <item>Luigi</item>
        <item>Room 4</item>
        <item>Room 5</item>
        <item>Room 6</item>
        <item>Room 7</item>
        <item>Room 8</item>
        <item>Room 9</item>
        <item>Room 10</item>
    </string-array>
</resources>