<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mjcdouai.maru.ui.ListMeetingsActivity">


        <item
            android:id="@+id/filter_menu_item"
            android:icon="@drawable/ic_baseline_filter_list_24"
            app:showAsAction="ifRoom"

            android:title="@string/filter" >
                <menu>
                        <item android:id="@+id/no_filter_item_menu"
                            android:title="@string/no_filter" />
                        <item android:id="@+id/filter_by_date_item_menu"
                            android:title="@string/filter_by_date" />
                        <item android:id="@+id/filter_by_place_item_menu"
                                android:title="@string/filter_by_place" />

                </menu>
        </item>

</menu>